All algo updated